--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
     --building-color4: #538cc6;
     --window-color1: black;
     --window-color2: #8cd9b3;
+    --window-color3: #d98cb3;
+    --window-color4: #8cb3d9;
   }
   
   * {
@@ -28,13 +30,22 @@
     top: 0;
   }
   
+  .building-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .window-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  
   /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
   .bb1 {
     width: 10%;
     height: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
   
   .bb1a {
@@ -69,49 +80,142 @@
   .bb2 {
     width: 10%;
     height: 50%;
-    background-color: var(--building-color2);
   }
+  
+  .bb2a {
+    border-bottom: 5vh solid var(--building-color2);
+    border-left: 5vw solid transparent;
+    border-right: 5vw solid transparent;
+  }
+  
   .bb2b {
     width: 100%;
     height: 100%;
-    background: linear-gradient(
+    background: repeating-linear-gradient(
         var(--building-color2),
         var(--building-color2) 6%,
         var(--window-color2) 6%,
         var(--window-color2) 9%
       );
   }
+  
   .bb3 {
     width: 10%;
     height: 55%;
-    background-color: var(--building-color3);
+    background: repeating-linear-gradient(
+        90deg,
+        var(--building-color3),
+        var(--building-color3),
+        var(--window-color3) 15%
+      );
   }
   
   .bb4 {
     width: 11%;
     height: 58%;
+  }
+  
+  .bb4a {
+    width: 3%;
+    height: 10%;
     background-color: var(--building-color4);
+  }
+  
+  .bb4b {
+    width: 80%;
+    height: 5%;
+    background-color: var(--building-color4);
+  }
+    
+  .bb4c {
+    width: 100%;
+    height: 85%;
+    background-color: var(--building-color4);
+  }
+  
+  .bb4-window {
+    width: 18%;
+    height: 90%;
+    background-color: var(--window-color4);
   }
   
   /* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
   .fb1 {
     width: 10%;
     height: 60%;
+  }
+  
+  .fb1a {
+    border-bottom: 7vh solid var(--building-color4);
+    border-left: 2vw solid transparent;
+    border-right: 2vw solid transparent;
+  }
+  
+  .fb1b {
+    width: 60%;
+    height: 10%;
     background-color: var(--building-color4);
+  }
+    
+  .fb1c {
+    width: 100%;
+    height: 80%;
+    background: repeating-linear-gradient(
+        90deg,
+        var(--building-color4),
+        var(--building-color4) 10%,
+        transparent 10%,
+        transparent 15%
+      ),
+      repeating-linear-gradient(
+        var(--building-color4),
+        var(--building-color4) 10%,
+        var(--window-color4) 10%,
+        var(--window-color4) 90%
+      );
   }
   
   .fb2 {
     width: 10%;
     height: 40%;
+  }
+  
+  .fb2a {
+    width: 100%;
+    border-bottom: 10vh solid var(--building-color3);
+    border-left: 1vw solid transparent;
+    border-right: 1vw solid transparent;
+  }
+  
+  .fb2b {
+    width: 100%;
+    height: 75%;
     background-color: var(--building-color3);
+  }
+  
+  .fb2-window {
+    width: 22%;
+    height: 100%;
+    background-color: var(--window-color3);
   }
   
   .fb3 {
     width: 10%;
     height: 35%;
+  }
+    
+  .fb3a {
+    width: 80%;
+    height: 15%;
     background-color: var(--building-color1);
   }
     
+  .fb3b {
+    width: 100%;
+    height: 35%;
+    background-color: var(--building-color1);
+  }
+  
   .fb4 {
     width: 8%;
     height: 45%;
